# AIOS_Clean_Luna

./: .gitignore  AIOS_EXECUTIVE_SUMMARY.md  AIOS_MANUAL.md  EVOLUTION_LOOP_IMPLEMENTATION_SUMMARY.md  LUNA_HOME_STRUCTURE.md  MANUAL_TOC.md  README.txt  README_LUNA_HOME.md  SKELETON_COMPLETE.txt  START_HERE.md  START_HERE_EVOLUTION_SKELETON.md  START_LUNA.bat  SYSTEM_CARD.md  cursor_integration_and_validation_of_lu.md
AIOS/: .coveragerc  .gitattributes  .gitignore  README.md  SOVEREIGNTY.md  SYSTEM_PROOF.md  luna_chat.py  luna_cycle_agent.py  luna_start.py  main.py  requirements.txt  streamlit_app.py  test_security_validator.py
AIOS/_maps/: plan_20251022_075428_4701.json  plan_20251022_075456_5287.json  plan_20251022_075508_9322.json  plan_20251022_075528_7976.json  plan_20251022_075548_4818.json
AIOS/backup_core/: GOOGLE_DRIVE_SETUP.md  README.md  README_GOOGLE_DRIVE_SYNC.md  REFACTOR_COMPLETE.md  TRAVIS_PHILOSOPHY.md  __init__.py  backup_core.py  backup_tracking.json  file_checksums.json  google_drive_sync.py  hybrid_backup_core.py
AIOS/backup_core/rust_backup/: Cargo.toml
AIOS/backup_core/rust_backup/src/: lib.rs
AIOS/carma_core/: README.md  __init__.py  carma_core.py  refactor_script.py
AIOS/config/: autonomous_config.json  dev_smoke_test.json  luna_learning_history.json  voice_profile.json
AIOS/consciousness_core/: HANDRAILS_INSTALLED.md  README.md  __init__.py  consciousness_core.py  drift_monitor.py  llm_client.py
AIOS/containment/: filesystem_guard.py
AIOS/data_core/: COMPLETE_REORGANIZATION_SUMMARY.md  FOLDER_REORGANIZATION_COMPLETE.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_SUMMARY.md  __init__.py  audit_log.json  billing_metrics.json  conversation_questions.json  data_core.py  data_core_unified.py  directory_structure.txt  model_config.py  result.md
AIOS/data_core/system/rust_data/: Cargo.toml
AIOS/data_core/system/rust_data/src/: lib.rs
AIOS/dream_core/: README.md  __init__.py  dream_core.py
AIOS/dream_core/rust_dream/: .gitignore  Cargo.toml
AIOS/dream_core/rust_dream/src/: lib.rs
AIOS/enterprise_core/: .audit_verified  AIOS-CrossCutting-Concerns.md  AIOS-Middleware-Architecture.md  AIOS-Orchestrator-README.md  AIOS-Orchestrator.psd1  AIOS-Orchestrator.psm1  AIOSTools.psm1  AIOS_COMPLIANCE_REPORT.md  AIOS_STANDARDS.md  DEEP_TESTING_COMPLETE.md  HUMANITARIAN_INTERVENTION_SUCCESS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INTEGRATION_COMPLETE_SUMMARY.md  INTERNAL_REASONING_COMPLETE.md  LICENSE  PATTERN_CONFIRMED.md  PERSISTENT_MEMORY_IMPLEMENTED.md  README.md  SESSION_COMPLETE_SUMMARY.md  TRAIT_CLASSIFIER_IMPLEMENTED.md  (+6 more)
AIOS/luna_core/rust_luna/: Cargo.toml
AIOS/luna_core/rust_luna/src/: lib.rs
AIOS/support_core/rust_support/: Cargo.toml
AIOS/support_core/rust_support/src/: lib.rs
docs/: EXTERNAL_AUDITOR_ASSESSMENT_2025-10-22.md  INDEPENDENT_VERIFICATION_KIA.md  LUNA_SOVEREIGNTY_DECLARATION.md
models/: lineage.csv
(+2124 files in other folders)
