[package]
name = "aios_backup_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "aios_backup_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
