[package]
name = "aios_luna_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "aios_luna_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hashbrown = "0.14"
indexmap = "2.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
rayon = "1.8"
regex = "1.10"

[build-dependencies]
pyo3-build-config = "0.21"
