[package]
name = "aios_data_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "aios_data_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.11.0"  # For parallel file operations
sha2 = "0.10"
hex = "0.4"
